# online-cinema-api

./: .dockerignore  .env.sample  .env.test  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.override.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
scripts/: create_admin.py  entrypoint.sh
scripts/initdb/: init_test-db.sql
src/: admin.py  celery_app.py  main.py
src/core/: __init__.py  config.py  dependencies.py  exceptions.py  logging.py  security.py
src/crud/: base.py  bookmark.py  cart.py  certification.py  comment.py  director.py  genre.py  movie.py  notification.py  order.py  payment.py  profile.py  rating.py  star.py  token.py  user.py
src/database/: __init__.py  base.py  celery_session.py  seed.py  session.py
src/migrations/: env.py
src/migrations/versions/: 0487c21d3def_add_interaction_models.py  12ae8ace87b5_add_movie_and_catalog_models.py  4300932a9995_add_payment_table.py  7044f21daa8d_add_auth_tables.py  8fd0dc5d7e48_add_order_tables.py  9a0674928523_add_cart_tables.py  c3e1b8cfe4b4_make_token_expires_at_timezone_aware.py
src/models/: __init__.py  cart.py  interaction.py  movie.py  order.py  payment.py  user.py
src/routes/: __init__.py  auth.py  bookmarks.py  cart.py  certifications.py  directors.py  genres.py  interactions.py  movies.py  notifications.py  orders.py  payments.py  profiles.py  stars.py  users.py
src/schemas/: auth.py  cart.py  catalogs.py  common.py  interactions.py  movies.py  notifications.py  orders.py  payments.py  profiles.py  users.py
src/services/: stripe.py
src/storages/: s3.py
src/tasks/: cleanup.py  email.py
src/templates/: activation_email.html  activation_email.txt  order_confirmation_email.html  order_confirmation_email.txt  password_reset_email.html  password_reset_email.txt
tests/: conftest.py  helpers.py  test_auth.py  test_bookmarks.py  test_cart.py  test_catalogs.py  test_interactions.py  test_movies.py  test_notifications.py  test_orders.py  test_payments.py  test_profiles.py  test_scenarios.py  test_tasks.py  test_users.py
